# tarea1-bd2

./: .gitignore  LICENSE.md  README.md  manage.py  pyproject.toml
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_birthdate_alter_user_photo.py  0003_download_dataset_download_download_dataset_id.py  0004_alter_download_dataset_id.py
datasetman/: apps.py  forms.py  models.py  urls.py  views.py
datasetman/templatetags/: dataset_filters.py
downloads/: models.py
downloads/migrations/: 0001_initial.py  0002_alter_download_downloaded_by.py
profiles/: models.py  views.py
profiles/migrations/: 0001_initial.py  0002_alter_profile_birthdate_alter_profile_photo.py
profiles/templates/profiles/: index.html
static/css/: style.css
tarea1bd2/: asgi.py  settings.py  urls.py  wsgi.py
templates/: _page.html  base.html  home.html
templates/datasets/: detail-dataset.html  upload-dataset.html
templates/registration/: login.html  signup.html
templates/users/: user-details.html  user-profile.html
